mule-user-guide/v/3.8/msmq-connector-user-guide.adoc
= MSMQ连接器用户指南
:keywords: anypoint studio, esb, connector, endpoint, msmq, microsoft, message queuing

*Select*

*Latest version: 1.9.0*

Microsoft消息队列（MSMQ）连接器使用具有两层的典型客户端 - 服务器体系结构，在Mule ESB中运行的连接器或客户端以及在服务器端运行的Windows网关。后者公开了用于发送或接收MSMQ消息的HTTP Web API。

[WARNING]
*Important*：在安装和配置MSMQ之前先安装 link:/mule-user-guide/v/3.8/windows-gateway-services-guide[Windows网关服务]。

以下是解决方案架构的高级图：

image:WindowsGateway.png[WindowsGateway]

有关更多信息，请参阅 link:/mule-user-guide/v/3.8/windows-gateway-services-guide[Windows网关服务指南]。

== 无效的消息处理

无法读取的邮件将移至`invalid-queue-name`子队列。您可以使用Windows网关服务配置文件更改此队列的名称。您也可以更改无效消息的超时时间，以使用不正确的格式化程序解析消息的有效内容。

[source, xml, linenums]
----
<!-- The name of the invalid messages sub-queue -->
<add key="invalid-queue-name" value="Invalid"/>

<!-- Time in seconds for invalid messages before being sent to dead-letter queue -->
<add key="invalid-message-timeout" value="86400"/>
----

=== 启用完全一次和有序支持

要启用Exactly-Once和In-Order（EOIO）支持，您必须在Anypoint Studio中选择包含MSMQ连接器的流，并将默认操作*Processing Strategy*设置为`synchronous`。否则，连接器处理在ESB中收到的消息，并忽略队列中的原始顺序。

image:FlowConfiguration.png[FlowConfiguration]

该设置在XML中显示为：

[source, xml, linenums]
----
<flow name="myMSMQFlow" doc:name="myMSMQFlow" processingStrategy="synchronous">
----

更多有关<<Message delivery>>部分的相关信息。

主要用例== 

MSMQ连接器支持两种主要用例：

* 向MSMQ发送（HTTP POST）单个消息
* 从MSMQ接收（HTTP GET）一条或多条消息

===  HTTP POST方案

在POST方案中，Mule ESB使用连接器将当前流中的Mule消息的原始表示使用HTTP发送到MSMQ，并将其发送到Windows网关。该消息作为HTTP POST发送。 HTTP请求的有效载荷是Mule消息的序列化有效载荷（二进制或文本）。 Web API在Windows网关上运行，并使用MSMQ将消息转发到队列。

以下消息显示HTTP POST请求的结构。

====  POST请求消息

[source, code, linenums]
----
POST: https://localhost:9333/msmq
Authorization: mule test-token
Mule-Msmq-Queue-Name: .\private$\qout
Mule-Api-Version: 1
Body: THIS IS A SAMPLE MESSAGE
----

POST回应消息

[source, code, linenums]
----
Http /1.1 201 Created
----

===  HTTP GET方案

在GET方案中，Mule ESB使用连接器从MSMQ接收一条或多条消息。这是作为Windows网关的HTTP GET完成的。 Web API在网关中运行，并返回MSMQ队列中的可用消息。这些消息使用MIME `multipart/mixed`内容类型在单个HTTP响应中返回。

以下消息说明了HTTP GET请求的结构。

====  GET请求消息

[source, code, linenums]
----
GET: https://localhost:9333/msmq?count=50
Authorization: mule test-token
Mule-Msmq-Queue-Name: .\private$\out
Mule-Api-Version: 1
----

====  GET响应消息

[source, code, linenums]
----
Transfer-Encoding: chunked
Content-Type: multipart/mixed; boundary="47c7462b-f831-48f5-aed2-a561ef31dcc6"

28
--47c7462b-f831-48f5-aed2-a561ef31dcc6

218
Content-Type: application/octet-stream
mule-msmq-acknowledgement-type: None
mule-msmq-acknowledgement: None
mule-msmq-attach-sender-id: True
mule-msmq-body-type: 0
mule-msmq-connector-type: 0
mule-msmq-correlation-id: 00000000-0000-0000-0000-000000000000\0
mule-msmq-id: 22af009e-3b1b-4173-ad7f-34b060a158fc\6145
mule-msmq-label:
mule-msmq-lookup-id: 288230376151717889
mule-msmq-message-type: Normal
mule-msmq-priority: Normal
mule-msmq-source-machine: win-dt3v2pm5d7l
mule-msmq-extension:
mule-msmq-app-specific: 0

11
THIS IS A MESSAGE
2C

--47c7462b-f831-48f5-aed2-a561ef31dcc6--

0
----

用于向网关服务发送消息和从网关服务接收消息的HTTP标头在本文后面会详细讨论。

==  消息传递

MSMQ连接器可以使用两阶段协议来确保与网关之间的零消息丢失通信，或者当您希望实现高吞吐量并且不需要确保接收每条消息时，可以将其设置为使用无确认协议至少一次。

消息传递可以从两个不同的选项中选择。 *Message delivery*配置设置建立了消息传送工作模式。下面介绍每种可用选项的详情。

=== 不确认

在传统方案中，在网关中读取消息后，将从队列中删除消息。如果ESB中存在连接故障或其他问题，导致邮件无法读取，则该邮件将丢失（可通过在相应的配置设置中选择`NoAcknowledgement`来设置此邮件传递模式）。尽管如此，这种交付模式是最快的，如果你不需要每条消息至少交付一次，你应该选择它。

=== 至少一次（默认）

在使用两阶段提交协议的场景中，从主队列中读取的消息将保留在子队列中作为备份。连接器收到消息副本后，会向网关发送一个附加请求，以从子队列中删除该消息。当此提交操作未完成时，消息仍保留在子队列中。经过一段时间之后，被视为孤儿的子队列中的消息将被移回到他们的父队列中，并被重试。清楚的是，除非流在提交阶段完成之前中断，否则此机制不应受流中发生的外部异常的影响（可通过在相应的配置设置中选择`AtLeastOnce`值来设置此消息传递模式）。

如上所述，如果您希望确保使用两个阶段提交协议，则消息传递模式取决于*Message delivery*配置设置，该设置应该设置为`AtLeastOnce`（默认）。如果您将此参数设置为`NoAcknoledgement`，则每条消息都将传递给mule，而不会收到来自它的接收。

== 消息超时

在不同的方法中，MSMQ消息提供了两个有助于授予信息可靠性的属性：

*  *timeToReachQueue*。 MSMQ服务器在网关中收到消息后可以达到的最大秒数。默认是不超时（InfiniteTimeout）。
*  *timeToBeReceived*。消息在为第三方应用程序出队之前可保留在队列中的秒数。默认是不超时（InfiniteTimeout）。

image:MSMQmessageTimeouts2.png[MSMQmessageTimeouts2]

[NOTE]
如果任何一个属性超时，则消息将移至死信队列。

指定属性的值：

[source, xml, linenums]
----
<msmq:send
    config-ref="MSMQ"
    messageFormatter="ActiveXMessageFormatter"
    doc:name="MSMQ"
    timeToBeReceived="0"
    timeToReachQueue="0" />
----

这两个属性都可以在连接器配置中设置，并由Windows网关读取。如果指定值为零（0），则默认值为（InfiniteTimeout）。

== 安全注意事项

MSMQ连接器的身份验证由包含在HTTP授权标头中的安全令牌处理。使用Mule方案对网关的每个HTTP请求都包含此令牌：

[source, code, linenums]
----
GET: https://localhost:9333/msmq?count=50
Authorization: mule test-token
Mule-Msmq-Queue-Name: .\private$\out
Mule-Api-Version: 1
----

在连接器上以及在网关配置文件中配置令牌。下面显示如何通过_accessToken_参数值在连接器端配置令牌：

[source, xml, linenums]
----
<msmq:config name="MSMQ" doc:name="MSMQ" accessToken="test-token" rootQueueName=".\private$\qout" serviceAddress="localhost:9333">
 <msmq:connection-pooling-profile initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW"/>
 </msmq:config>
----

=== 用户身份验证

代表连接器执行呼叫的用户通过两个自定义HTTP标头`mule-impersonate-username`和`mule-impersonate-password`进行身份验证。

使用用户身份验证时，MSMQ中的队列也必须标记为需要身份验证。这两个标题代表正在运行Windows Gateway服务的Active Directory林中的现有用户的Windows凭据，或代表托管该服务的计算机上的本地帐户。当这些HTTP标头包含在HTTP请求中时，Windows网关服务在对来自MSMQ的消息进行排队/出队前对其进行身份验证和模拟。这提供了使用Windows凭据在队列上配置正确的访问控制列表权限的功能。

以下HTTP请求示例说明了如何将这两个头从连接器传递到网关：

[source, code, linenums]
----
GET: https://localhost:9333/msmq?count=50
Authorization: mule test-token
Mule-Impersonate-Username: domain\myuser
Mule-Impersonate-Password: password
Mule-Msmq-Queue-Name: .\private$\out
Mule-Api-Version: 1
----

*Note*：连接器和网关使用SSL来保护所有HTTP通信。

=== 队列权限

要使用队列权限，请将队列标记为需要验证。另外，连接器必须发送HTTP请求消息中的`Mule-Impersonate-Username`和`Mule-Impersonate-Password`头以模拟该呼叫;否则将使用模拟主机的帐户（如果网关位于IIS中，则用户模拟Windows服务或应用程序池）。

*Note*：Windows用户在使用经过身份验证的队列之前必须至少第一次登录。当用户第一次登录时，Windows会创建一个用户配置文件，该用户配置文件必须存在供用户使用经过身份验证的队列。

下表显示了从队列发送或接收消息所需的权限：

[%autowidth.spread]
|===
| *Operation*  | *Permissions*
| *Receive*  |接收消息，查看消息
| *Send*  |发送消息，查看消息，获取属性
|===

在这两种情况下，Peek Message仅用于测试连接。如果不需要测试连接，则可以删除此权限。

*Note*：当MSMQ安装在未加入Windows域的计算机上时，它可以在工作组模式下工作。在这种模式下，认证队列不受支持，因此也不能使用队列权限。

== 消息序列化和格式化

Windows网关服务不使用MSMQ格式化程序，除非它由连接器指定。因此，HTTP请求负载中发送的消息以原始形式存储在MSMQ消息的主体中。但是，通过在连接器中设置消息格式化程序可以覆盖此行为。开箱即用支持单个格式器：`ActiveXMessageFormatter`。

以下示例说明如何在MSMQ连接器中设置格式器：

[source, xml, linenums]
----
<msmq:receive config-ref="MSMQ" doc:name="MSMQ (Streaming)" pollingPeriod="3000" messageFormatter="ActiveXMessageFormatter" />
----

在连接器上设置消息格式化程序时，会向Windows网关发送额外的HTTP标头`Mule-Msmq-Formatter`。网关使用该格式化程序在消息从MSMQ入队或出队时序列化和反序列化消息。

对于ActiveXMessageFormatter，网关还使用HTTP请求消息中由连接器设置的Content-Type：

[%header%autowidth.spread]
|===
|的Content-Type  |说明
| ` plain/text `  |连接器在当前Mule消息的有效载荷是字符串时设置它。设置时，网关将MSMQ消息的主体流设置为字符串。其他应用程序可以直接以字符串形式读取此消息。接收此消息的MSMQ连接器将Mule消息的有效载荷设置为字符串，以便不需要转换器。
| `application/octet-stream`  |当有效载荷是一个字节数组时设置。该消息以字节流的形式存储。
|===

=== 配置msmq：receive元素

主要场景中使用`msmq:receive`元素来接收来自网关的一条或多条消息。

下表显示了此元素中的属性：

[%autowidth.spread]
|===
| *Property*  | *Usage*
| *queueName*  | UNC路径或FormatName表示法中的队列名称。有关更多信息，请参阅 link:https://docs.google.com/a/mulesoft.com/document/d/1mUBv_Cdz1DDzdYgVHBy4cpXkvtdh1kwa3s4dLkjBEiM/edit#heading=h.4rg6xwxl7scj[队列名称]部分。覆盖全局元素中设置的队列名称。可选的。
| *pollingPeriod*  |连接器用于轮询MSMQ中已配置队列的间隔（以毫秒为单位）（只有在目标队列中没有消息需要检索时才会发生）。可选的。
| *messageCount*  |在单个批次中检索的最大邮件数量。可选的。
| *userName*  |从网关访问MSMQ时用于模拟呼叫的用户的名称。覆盖Global元素中设置的用户名。可选的。
| *password*  |从网关访问MSMQ时将用于模拟呼叫的用户的密码。覆盖Global元素中设置的密码。可选的。
| *messageFormatter*  |要在MSMQ中用于序列化和反序列化消息的消息格式器。可选的。
| *messageDelivery*  |消息传递工作模式。覆盖Global元素中设置的消息传递。可选的。有关这些工作原理的详细信息，请参阅上面的<<Message delivery>>部分。
|===

=== 配置msmq：send元素

在主要场景中使用`msmq:send`元素将一条消息发送到网关。

下表显示了此元素中的属性：

[%autowidth.spread]
|===
| *Property*  | *Usage*
| *queueName*  | UNC路径或FormatName表示法中的队列名称。有关更多信息，请参阅 link:https://docs.google.com/a/mulesoft.com/document/d/1mUBv_Cdz1DDzdYgVHBy4cpXkvtdh1kwa3s4dLkjBEiM/edit#heading=h.4rg6xwxl7scj[队列名称]部分。覆盖全局元素中设置的队列名称。可选的。
| *userName*  |从网关访问MSMQ时用于模拟呼叫的用户的名称。覆盖Global元素中设置的用户名。可选的。
| *password*  |从网关访问MSMQ时用于模拟呼叫的用户的密码。覆盖Global元素中设置的密码。可选的。
| *messageFormatter*  |要在MSMQ中用于序列化和反序列化消息的消息格式器。可选的。
| *payload*  |要发送到网关的消息有效负载。可选的
|===

== 队列名称（公共，私有和群集）

MSMQ连接器支持专用和公用队列。专用队列是不在Active Directory中发布的队列，仅在包含它们的本地计算机上显示。

支持以下方案：

* 路径名称：`ComputerName\private$\QueueName`
* 本地计算机上的路径名称：`\private$\QueueName`
* 直接格式名称：`DIRECT=ComputerAddress\PRIVATE$\PrivateQueueName`
* 私有格式名称：`PRIVATE=ComputerGUID\QueueNumber`

公用队列是在Active Directory中发布的队列。

公共格式名称包含字符串`PUBLIC=`，后跟创建时分配给队列的标识符。此标识符是为Active Directory中的队列对象列出的GUID。

以下是用于引用公用队列及其关联队列日志的一般格式：

*  `PUBLIC=QueueGUID`
*  `PUBLIC=QueueGUID;JOURNAL`

该连接器还支持故障转移群集中承载的专用队列，也称为MSMQ群集。这些队列对于群集是私有的，并使用以下格式引用：

`ClusterName\private$\QueueName`

连接器使用的MSMQ API要求您主要在使用远程队列时使用`Format Names`样式以及具有自定义配置选项的队列以及`Direct Format Names`来指定目标地址。

直接格式名称用于在不访问目录服务的情况下引用公用或专用队列。执行以下操作时将使用直接格式名称：

. 直接将消息发送到计算机。
. 通过Internet向计算机发送消息。
. 跨森林边界发送消息。
. 在域，工作组或离线模式下发送消息到任何队列。
. 在域，工作组或离线模式下阅读邮件。

不需要通过消息队列进行路由，身份验证和加密时，应使用直接格式名称发送消息。

当消息队列检测到远程公用队列或本地或远程专用队列的直接格式名称时，它不会联系目录服务。消息队列使用格式名称提供的信息将消息直接发送到目标。

在*queueName*连接器的设置中以这种方式指定地址所需的格式遵循以下模式：
`FormatName:Direct=[address_specification]\{private$\}[queue_name]`

计算机的地址规格可以用三种形式指定：

. 随着网络协议跟随目标计算机的网络地址。消息队列支持TCP，并且仅在WindowsNT®4.0和Windows 2000上支持SPX。
. 由底层操作系统本机支持的任何字符串来标识目标计算机（操作系统用作协议以指示计算机的本机协议应该用于解释计算机名称）。
. 由于Internet传输协议（HTTP或HTTPS）后跟主机计算机的IP地址或完整DNS名称（或企业内的计算机名称），然后通过以斜杠分隔的虚拟目录名称MSMQ 3.0）。默认虚拟目录名称为msmq，但消息队列可由IIS配置以使用不同的虚拟目录。

[%autowidth.spread]
|===
| *Protocol* | *Description* | *Network Address*
| TCP |基于IP的面向连接的TCP。| Internet地址表示法（IP地址）。
| SPX |基于IPX的面向连接的SPX。|网络号码和主机号码（由":"字符分隔）。
|操作系统|使用本机计算机命名约定进行连接。|底层操作系统支持的任何计算机名称。对于Microsoft®WindowsNT®4.0版本，它是UNC或DNS名称（请参阅公共和专用队列的示例）。
| HTTP | HTTP传输。| IP地址或完整的DNS名称（企业内的计算机名称），后跟用斜杠分隔的虚拟目录名称。
| HTTPS |通过安全套接字层（SSL）连接保护HTTP传输。| IP地址或完整DNS名称（企业中的计算机名称），后跟虚拟目录名称，斜线。
|===

有关如何在连接器的目标队列中指定此示例的一些示例是：

*  FormatName：DIRECT = IPX：00000012：00a0234f7500 \ PRIVATE $ \ MyQueue
*  FORMATNAME：DIRECT = TCP：157.18.3.1 \ PRIVATE $ \ myQueue中
*  FORMATNAME：DIRECT = OS：Mike01.msn.com \ PRIVATE $ \ myQueue中
*  FORMATNAME：DIRECT = OS：Mike02 \ PRIVATE $ \ myQueue中
*  FORMATNAME：DIRECT = OS：\ PRIVATE $ \ myQueue中

有关如何解决MSMQ的详细信息，请参阅以下 link:https://msdn.microsoft.com/en-us/library/ms700996(v=vs.85).aspx[文件]。

== 支持的消息属性

连接器允许传递或接收MSMQ消息的属性。这些属性在当前的Mule消息中设置，并作为自定义HTTP头传递给Windows网关。以下消息说明连接器如何为标签属性创建一个值为“CustomLabel”的新MSMQ消息：

[source, code, linenums]
----
POST: https://localhost:9333/msmq
Authorization: mule test-token
Mule-Msmq-Queue-Name: .\private$\qout
Mule-Api-Version: 1
Mule-Msmq-Label: CustomLabel
Body: THIS IS A SAMPLE MESSAGE
----

下表总结了接收操作的所有受支持属性以及HTTP标头的映射。

[%autowidth.spread]
|==============
| *Property*  | *HTTP header*  | *Usage*
| msmq.acknowledgement.type  | msmq-acknowledgement-type  |设置确认消息的类型以返回到发送应用程序。
| msmq.acknowledgement  | mule-msmq-acknowledgment  |设置接收消息队列生成的确认消息的队列。
| msmq.attach.sender.id  | mule-msmq-attach-sender-id  |获取一个值，该值指示是否将发件人ID附加到邮件。
| msmq.body.type  | mule-msmq-body-type  |获取消息正文包含的数据的类型。
| msmq.connector.type  | mule-msmq-connector-type  |获取一个值，该值指示通常由消息队列设置的某些消息属性是由发送应用程序设置的。
| msmq.correlation.id  | mule-msmq-correlation-id  |引用原始消息的消息标识符。此ID用于确认，报告和回复消息。支持的格式：`<GUID>\<Number>` +
例如：`66785f20-a2f3-42a3-bdcd-9ac5a937ac52\1`
| msmq-id  | mule-msmq-id  |消息的唯一标识符，由消息队列生成。
| msmq.label  | mule-msmq-label  |获取描述消息的应用程序定义的unicode字符串。
| msmq.lookup.id  | mule-msmq-lookup-id  |其中一个System.Messaging.MessagePriority值，它表示非事务性消息的优先级。默认值是“正常”。
| msmq.message.type  | mule-msmq-message-type  |获取从队列中检索的消息的类型，可以是Normal，Acknowledgement或Report。
| msmq.priority  | mule-msmq-priority  |获取或设置消息优先级，指示将消息放入队列的位置。
| msmq.extension  | mule-msmq-extension  |设置与消息关联的其他应用程序定义信息。将其编码为base64。
| msmq.app.specific  | mule-msmq-app-specific  |设置其他特定于应用程序的信息。
|==============

下表总结了发送操作的所有支持属性以及HTTP标头的映射。

[%autowidth.spread]
|========
| *Property*  | *HTTP header*  | *Usage*
| msmq.body.type  | mule-msmq-body-type  |设置邮件正文包含的数据的类型。
| msmq.label  | mule-msmq-label  |设置描述消息的应用程序定义的unicode字符串。
| msmq.acknowledgement.type  | msmq-acknowledgement-type a |
设置要返回给发送应用程序的确认消息的类型。

| msmq.attach.sender.id  | mule-msmq-attach-sender-id  |设置一个值，该值指示发件人ID是否应附加到邮件。
| msmq.priority  | mule-msmq-priority  |获取或设置消息优先级，它确定消息放置在队列中的哪个位置。
| msmq.connector.type  | mule-msmq-connector-type  |设置一个值，该值指示通常由消息队列设置的一些消息属性由发送应用程序设置。
| msmq.correlation.id  | mule-msmq-correlation-id  |设置引用原始消息的消息标识符。用于确认，报告和回复消息。支持的格式：`<GUID>\<Number>` +
例如：`66785f20-a2f3-42a3-bdcd-9ac5a937ac52\1`
| msmq.use.tracing  | mule-msmq-use-tracing  |设置一个值，该值指示在向目标队列移动时是否跟踪消息。
| msmq.extension  | mule-msmq-extension  |设置与消息关联的其他应用程序定义的信息。编码为base64。
| msmq.app.specific  | mule-msmq-app-specific  |设置其他特定于应用程序的信息。
| msmq.queue.override.transactional  | mule-msmq-queue-override-transactional  |使用远程事务队列时，由于缺少权限，MSMQ API可能无法访问这些设置。该值用于向网关表明目标队列是事务性的，并且消息应该在事务范围内发送（否则它将在死信队列中结束）。
| msmq.queue.override.authenticate  | mule-msmq-queue-override-authenticate  |使用远程已认证队列时，由于权限不足，MSMQ API可能无法访问这些设置。该值用于向网关指示目标队列要求发送已认证的消息。
|========

以下示例显示“set-payload”组件如何为MSMQ消息设置标签。

[source, xml, linenums]
----
<set-property propertyName="msmq.label" value="message_from_mule" doc:name="Label"/>
----
 
下面的示例指出了目标队列是事务性的网关（即消息将在事务范围内发送）。

[source, xml, linenums]
----
<set-property propertyName="msmq.queue.override.transactional" value="true" doc:name="TxQueue"/>
----

==  MSMQ连接器疑难解答

MSMQ连接器与Mule ESB日志记录基础结构集成，用于记录用户的错误和相关信息。

下表列出了使用MSMQ连接器时可能发生的常见错误：

[%autowidth.spread]
|===
| *Error*  | *Cause*
|未经授权。 "Authentication with the proxy failed"。 |连接器上配置的安全令牌和网关上的安全令牌不匹配。验证在Mule和Windows网关服务配置文件中的MSMQ连接器上配置的令牌。
|禁止。 "Access Forbidden to write in queue [Queue Name]"  |具有在用户名和密码中指定的凭据的用户没有写入或读取队列的权限。验证队列访问权限。
|不可接受。 "The connector and proxy versions do not match"  |这不太可能发生。在ESB中运行的连接器的版本与Windows Gateway的版本不兼容。确保更新连接器或网关以使用相同的版本。
未找到|。队列未找到[队列名称]  |无法找到连接器中配置的队列。
未找到|。 |连接器中配置的网关地址和端口不正确。验证网关配置以确定正确的服务器名称和端口。
|内部服务器错误 |网关出现意外错误。检查网关轨迹以确定此问题的原因。
|===

== 消息确认示例

*Requirements:*

link:http://go.microsoft.com/fwlink/?LinkID=240290[Windows Management Framework 3.0]下的*  Windows PowerShell 3.0
按照本指南中的说明安装MSMQ连接器的*  Anypoint Studio。
*  link:_attachments/MessageAcknowledgeSample.zip[MessageAcknowledgeSample.zip]对zip文件进行采样。包含Powershell脚本（.ps1文件类型）和msmq-demo-ack.zip文件。可执行文件使用MuleSoft的证书进行签名。

=== 第1步：打开msmq-demo-ack项目

. 启动Anypoint Studio并打开现有的Mule项目。
. 点击*File*> *Import*> *Anypoint Studio*> *Anypoint Studio* *generated Deployable Archive (.zip)*。
. 在zip文件中，导航文件系统，然后点击`msmq-demo-ack.zip`文件。
. 点击*Finish*。

=== 第2步：运行安装程序脚本

. 该脚本为样本创建消息队列并发送消息。
. 打开命令窗口：Windows键+ *R*，键入*PowerShell*，右键单击该程序，然后单击*Run As Administrator*。
. 转至示例目录，然后输入*Set-ExecutionPolicy Unrestricted*，然后按*Enter*。默认情况下，执行策略值是受限制的，不允许您运行此示例。
. 输入*.\1-setup.ps1*并按*Enter*。
. 控制台显示：
+
[source, code, linenums]
----
Creating .\private$\sampleq
Queue Creating .\private$\secondq
Queue Creating .\private$\adminq
Queue Sending Message 1 to .\private$\sampleq
Sending Message 2 to .\private$\secondq
Sending Message 3 to .\private$\sampleq
Sending Message 4 to .\private$\sampleq
----
+
. 请勿关闭此控制台。

=== 第3步：运行演示

. 右键点击*msmq-demo.xml*并选择*Run As Mule Application*。
. 检查控制台以查看应用程序何时启动：
+
[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'msmq-demo-ack' + ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----
+
. Check for these lines, which indicate that MSMQ connector is listening to both queues and received 1 message in sampleq queue and 6 messages in adminq queue.
+
[source, code, linenums]
----
INFO  XXXX-XX-XX XX:XX:XX,XXX [Receiving Thread] org.mule.modules.msmq.MsmqConnector: Connecting to https://localhost:9333/msmq
INFO  XXXX-XX-XX XX:XX:XX,XXX [Receiving Thread] org.mule.modules.msmq.MsmqConnector: Connecting to https://localhost:9333/msmq
INFO  XXXX-XX-XX XX:XX:XX,XXX [Receiving Thread] org.mule.modules.msmq.MsmqConnector: Receiving 1 from .\private$\sampleq
INFO  XXXX-XX-XX XX:XX:XX,XXX [Receiving Thread] org.mule.modules.msmq.MsmqConnector: Receiving 6 from .\private$\adminq
----
+
. The following lines appear (order may change), which indicate that one message was read, `* Message 1 *`. The message's body and label are shown along with several incorrect versions of ACK (logged as 'INFOs') or NACK (logged as WARNs) depending on the context and the message. For more information, see link:http://msdn.microsoft.com/en-us/library/system.messaging.acknowledgment[Acknowledgment Enumeration].
+
[source, code, linenums]
----
INFO  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-choice-flow.stage1.03] org.mule.api.processor.LoggerMessageProcessor: ACK Cause: ReachQueue | Correlation Id: xxxx  | Label: Message 2
INFO  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-choice-flow.stage1.07] org.mule.api.processor.LoggerMessageProcessor: ACK Cause: Receive | Correlation Id: xxxx  | Label: Message 1
INFO  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-normalFlow.stage1.02] org.mule.api.processor.LoggerMessageProcessor: Label: Message 1 | Body: <?xml version="1.0"?>
<string>First Message</string>
INFO  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-choice-flow.stage1.04] org.mule.api.processor.LoggerMessageProcessor: ACK Cause: ReachQueue | Correlation Id: xxxx  | Label: Message 4
INFO  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-choice-flow.stage1.02] org.mule.api.processor.LoggerMessageProcessor: ACK Cause: ReachQueue | Correlation Id: xxxx  | Label: Message 1
WARN  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-ReceiveTimeout.stage1.02] org.mule.api.processor.LoggerMessageProcessor: 'ReceiveTimeout NACK' Received | Correlation Id: xxxx | Label: Message 4
WARN  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-NotTransactionalQueue.stage1.02] org.mule.api.processor.LoggerMessageProcessor: 'NotTransactionalQueue NACK' Received | Correlation Id: xxxx | Label: Message 3
----
+
. Double-click *Choice* flow control under the *msmq-choice-flow* flow to view its properties:
+
image:MSMQAdmin.png[MSMQAdmin] 
The Choice flow control evaluates the `msmq.acknowledgement` property of each message received. This routes messages to a SubFlow (using Flow Reference control). Messages received in `adminq` are just for acknowledgement purposes. Even when those six messages have an `msmq.id` property, it is not important, but what is relevant is the `msmq.correlation.id`, which points to the `msmq.id` of the message originating the acknowledgement message in the administrative queue. In the sample, Message 4 has been set with a millisecond in the property timeToBeReceived, which produces a ReceiveTimeout NACK. Also Message 6 is sent in a transactional way using a non-transactional queue, which brings a NotTransactionalQueue NACK.

==== Deleting a Message

. Open the Message Queuing Administrative Console. 
. Press the Windows Key + *E*. 
. Right-click *Computer* and click *Manage*.
+
image:MSMQManage.png[MSMQManage] 

. In the Computer Management Console tree on the left, open *Services and Applications* > *Message Queueing* > *Private Queues* 
. A remaining message displays in secondq, as MSMQ connector in not configured to listen this queue. 
. Delete the message: In the left tree, open *Private Queues* > *secondq* > *Queue messages* and right-click *Queue messages* > *All Tasks* > *Purge*:
+
image:MSMQpurge.png[MSMQpurge]

. Select *Yes* in the popup.
. Return to Anypoint Studio and notice these additional lines in the Console, which indicate an additional kind of NACK, and that the originating message has not been read and has been purged:
+
[source, code, linenums]
----
INFO  XXXX-XX-XX XX:XX:XX,XXX [Receiving Thread] org.mule.modules.msmq.MsmqConnector: Receiving 1 from .\private$\adminq
WARN  XXXX-XX-XX XX:XX:XX,XXX [[msmq-demo-ack].msmq-QueuePurged.stage1.02] org.mule.api.processor.LoggerMessageProcessor: 'QueuePurged NACK' Received | Correlation Id: xxxx | Label: Message 2
----

=== Step 4: Cleaning the Environment

* Go back to the console and type **.\2-clean.ps1 **and this message appears:
+
[source, code, linenums]
----
Deleting .\private$\sampleq Queue
Deleting .\private$\secondq Queue
Deleting .\private$\adminq Queue
----

=== CloudHub Integration Sample

This sample receives incoming requests via HTTP connector, and sends the request via the MSMQ connector (Send operation) to the remote MSMQ queue. It then receives a MSMQ message from your server (Streaming Receive operation) and logs the result.

. Create a new Mule project from *File* > *New* > *Mule Project*. You can set name to cloudhub-test. Click *Finish*.
. Go to Configuration XML tab and replace existing code with the following:
+
[source, xml, linenums]
----
<mule xmlns:msmq="http://www.mulesoft.org/schema/mule/msmq" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/msmq http://www.mulesoft.org/schema/mule/msmq/current/mule-msmq.xsd">
  <msmq:config name="MSMQ" serviceAddress="X.X.X.X:9333" accessToken="you_key" rootQueueName=".\private$\test-cloudhub" ignoreSSLWarnings="true" doc:name="MSMQ"/>
  <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="9333" doc:name="HTTP Listener Configuration"/>
    <flow name="msmq-cloudhub-test2Flow1" doc:name="msmq-cloudhub-test2Flow1">
      <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <expression-filter expression="#[payload != '/favicon.ico']" doc:name="Expression"/>
        <set-payload value="#['Hello, ' + payload + '. Today is ' + server.dateTime.format('dd/MM/yy') + '.' ]" doc:name="Set Payload"/>
        <msmq:send config-ref="MSMQ" messageFormatter="ActiveXMessageFormatter" doc:name="MSMQ"/>
    </flow>
    <flow name="msmq-cloudhub-test2Flow2" doc:name="msmq-cloudhub-test2Flow2">
        <msmq:receive config-ref="MSMQ" messageFormatter="ActiveXMessageFormatter" doc:name="MSMQ (Streaming)"/>
        <byte-array-to-string-transformer doc:name="Byte Array to String"/>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>
    </flow>
</mule>
----
+
In the MSMQ configuration node: 
+
* *serviceAddress* is the IP and port of your VPN appliance. Double check that port 9333 (or the one set during Windows Gateway setup) is open in the firewall settings and the appliance server. 
*  *accessToken* is the token configured during Gateway setup.
*  *rootQueueName* is the _existing_ queue name with writing rights to user Everyone according normal installation of Mule samples. You can verify that connectivity to MSMQ is OK by using the *Test Connection* button:
+
image:MSMQGlobalElProps.png[MSMQGlobalElProps]
+
. Right-click the *cloudhub-test* Mule project, select *Deploy to Anypoint Platform* -> *Cloud*.
. Fill in the fields with the provided account settings that you used when you created your account in the link:https://anypoint.mulesoft.com[Anypoint Platform]
. Select the Environment, choose an available domain and click *Finish*. You are prompted with a confirmation window. Click *OK*. Then you are able to use the integration project.
+
image:MSMQCHsuccess.png[MSMQCHsuccess] 

. Point your browser to `+http://your_subdomain.cloudhub.io/this_is_a_test+`. The browser remains blank.
. Log into the link:https://anypoint.mulesoft.com[Anypoint Platform] to enter your application, and select Logs from the dashboard.
. The resulting messages are logged:
+
image:MSMQinfo.png[MSMQinfo] 

=== Support for load balancer scenarios

Multiple instances of the gateway can be configured under an HTTP load balancer to scale up horizontally. Since the MSMQ connector uses HTTP to communicate with the gateway, no additional configuration is required from a networking perspective. However, this slightly changes the behavior of a background process in the gateway for supporting the two-phase commit protocol.

This process is responsible for making sure a batch a messages stored in a subqueue has been confirmed so it can be deleted or moved back to the parent queue. When multiple instances of a gateway are hitting the same queue in a load balancer, there are chances of having this process scanning and updating the queue at the same time, which could affect the MSMQ service performance considerably. To avoid this concurrency issue, a new setting "cleanup-offset" was added in the gateway configuration.

The idea of this setting is to introduce a delay in minutes for the kick off of the background process. The default value for this setting is "0", which means no delay.

Every gateway instance in a load balancer should be set with a different offset value to avoid hitting the same queues concurrently by this background process. As a rule of thumb, the unit for incrementing this value in each gateway should be the result of diving 10 by the number of gateway instances, e.g. : 2 for a farm of 5 gateways or 3 for a farm of 3 gateways.
